[package]
name = "spar-rs"
description = "generate rust bindings from a typescript .d.ts"
version = "0.0.17"
authors = ["Elizabeth Marston <liz.mars@pm.me>"]
repository = "https://github.com/elmarsto/spar-rs"
edition = "2018"
license-file = "LICENSE"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

js-sys = "0.3.46"


[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.wasm-bindgen]
version = "0.2.63"
features = ["serde-serialize"]

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }


[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O1", "--enable-mutable-globals"]
